Optimize annotation literal usage
When using an event annotation without any parameters, we can reuse the
exact same annotation literal for each execution.
Moreover, we can cache an array containing the instance as that's what
we need.

Overall, it should reduce the allocations in the common cases.